:bug: hamburger button bug fixed on ios

--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ section .container{
         transform: rotate(360deg);
     }
 }
-}
+
 @keyframes spin{
     0%{
         -webkit-transform: rotate(0deg);
@@ -202,11 +202,20 @@ section .container{
     height: 100%;
     left:0 ;
     top: 0;
-    z-index: 10;
+    z-index: 11;
     border-right:1px solid #e8dfec;
-    padding: 30px;
+    
     -webkit-transition: all 0.9s ease;
     transition: all 0.9s ease;
+}
+.aside .aside-inner{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+    overflow-y: auto;
 }
 .aside .nav-toggler{
     height: 40px;
